--- a/apps/smallapp/reprint/yxhscq/index.html
+++ b/apps/smallapp/reprint/yxhscq/index.html
@@ -1,7 +1,7 @@
 <meta name=viewport content="width=device-width">
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <body onload="onload()">
-<audio src="bgm1.mp3" id="bgm" controls="controls" loop="false" oncanplaythrough="bgmloadok()" hidden>如果您看到此消息,请<a href="javascript:bgmloadok()">点这里</a></audio><iframe hidden src="data:text/html,<meta />"></iframe>
+<audio src="bgm1.mp3" id="bgm" controls="controls" loop="false" oncanplaythrough="bgmloadok()" hidden>如果您看到此消息,请<a href="javascript:bgmloadok()">点这里</a></audio><iframe hidden src="data:text/html,111" onload="bgmloadok()"></iframe>
     <div class="container">
         <h1>营销号生成器</h1>
         <div class="row">
