--- a/apps/smallapp/submit.qm/index.html
+++ b/apps/smallapp/submit.qm/index.html
@@ -20,8 +20,8 @@ function getRandom(min, max) {
 <div>提交ID: <span style="color:blue">
 <script>document.write(getRandom(10000000,99999999))</script></span><br>
 若ID重复,请<a href="javascript://">重新获取</a>
-<div style="text-align:center">扫描二维码即可签名</div>
-</div>
+<div style="text-align:center">扫描二维码即可签名(需在微信中打开)<br>
+<img src="qrcode.png.PNG"></div></div>
 
 </body>
 </html>
