--- a/apps/smallapp/submit.qm/index.html
+++ b/apps/smallapp/submit.qm/index.html
@@ -13,14 +13,24 @@
 function getRandom(min, max) {
     return Math.floor(Math.random() * (max - min + 1) ) + min;
 }
+function getrdmid(){
+function testData(num){
+var str=String(num);
+while(str.length<15){
+str+=getRandom(0,9);
+}
+return Number(str);
+}
+return testData(new Date().getTime());
+}
 </script>
 </head>
 <body>
 
 <h1>提交签名</h1>
-<div>提交ID: <span style="color:blue" id=subid><script>document.write(getRandom(100000000000000,999999999999999))
-</script></span> <span style="background-color:#3333ff" onclick="copytext(subid.innerHTML)">复制</span><br>
-若ID重复,请<a href="javascript:subid.innerHTML=getRandom(100000000000000,999999999999999)">重新获取</a>
+<div>提交ID: <span style="color:blue" id=subid><script>document.write(getrdmid())
+</script></span> <span style="background-color:#3078ef" onclick="copytext(subid.innerHTML)">复制</span><br>
+若ID重复,请<a href="javascript:subid.innerHTML=getrdmid()">重新获取</a>
 <div style="text-align:center">扫描二维码即可签名(需在微信中打开)<br>
 <img src="qrcode.png.PNG"></div></div>
 
