--- a/apps/smallapp/submit.qm/index.html
+++ b/apps/smallapp/submit.qm/index.html
@@ -23,6 +23,7 @@ return Number(str);
 }
 return testData(new Date().getTime());
 }
+addEventListened("load",function(){subid.innerHTML=getrdmid()})
 </script>
 </head>
 <body>
