--- a/apps/smallapp/submit.qm/index.html
+++ b/apps/smallapp/submit.qm/index.html
@@ -32,8 +32,10 @@ addEventListened("load",function(){subid.innerHTML=getrdmid()})
 <div>提交ID: <span style="color:blue" id=subid><script>document.write(getrdmid())
 </script></span> <span style="background-color:#3078ef" onclick="copytext(subid.innerHTML)">复制</span><br>
 若ID重复,请<a href="javascript:subid.innerHTML=getrdmid()">重新获取</a>
-<div style="text-align:center">扫描二维码即可签名(需在微信中打开)<br>
-<img src="qrcode.png.PNG"></div></div>
+<div style="text-align:center" id=qr style="">
+<span style="position:absolute;z-index:2;width:100%;height:100%;top:0;left:0;background"></span>
+扫描二维码即可签名(需在微信中打开)<br><img src="qrcode.png.PNG"></div>
+</div>
 
 </body>
 </html>
