--- a/apps/smallapp/submit.qm/index.html
+++ b/apps/smallapp/submit.qm/index.html
@@ -33,12 +33,12 @@ addEventListened("load",function(){subid.innerHTML=getrdmid()})
 </script></span> <span style="background-color:#3078ef" onclick="copytext(subid.innerHTML)">复制</span><br>
 若ID重复,请<a href="javascript:subid.innerHTML=getrdmid()">重新获取</a><br>
 <a href="javascript:qr.hidden=qr2.hidden=0;">提交签名</a>
-<div id=qr style="text-align:center;z-index:3;background-color:#fff;position:absolute;transform:
-translate(-50%,-50%);left:50%;top:50%;" hidden><span id=qr2 style=
-"position:fixed;z-index:2;width:100%;height:100%;top:0;left:0;background-color:rgba(170,170,170,0.3)"></span>
+<div id=qr style="text-align:center;z-index:5;background-color:#fff;position:absolute;transform:
+translate(-50%,-50%);left:50%;top:50%;" hidden>
 扫描二维码即可签名(需在微信中打开)<br><img src="qrcode.png.PNG"><br>
 <a href="javascript:qr.hidden=qr2.hidden=1">关闭</a></div>
-</div>
+</div> <span id=qr2 hidden style=
+"position:absolute;z-index:2;width:100%;height:100%;top:0;left:0;background-color:rgba(170,170,170,0.3)"></span>
 
 </body>
 </html>
