--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -18,10 +18,13 @@ https://api.qrserver.com/v1/create-qr-code/?color=000000&bgcolor=FFFFFF&data=tes
 二维码颜色: <input type=color>或<input placeholder=手动输入> <b>提示:</b> 请不要太接近背景颜色<br>
 <button type=submit>制作</button>
 </form>
+<div>
+</div>
 
 <script>
 makeform.onsubmit=function(event){
-event.preventDefault()
+event.preventDefault();
+
 }
 </script>
 
