--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -29,7 +29,7 @@ continuelog.dialog({autoOpen:0,modal:1,width:"300px",hidex:1})
 makeform.onsubmit=function(event){
 event.preventDefault();
 continuelog.dialog("open");
-continuelog.innerHTML+="<img src='https://i0.hdslb.com/bfs/archive/d52994a1876d07a975dc6683b78a898d9b581208.png'"+
+continuelog.innerHTML+="<img hidden src='https://www.w3school.com.cn/i/eg_mouse.jpg'"+
 " onload='internetnormalornotsuccess(1)' onerror='internetnormalornotsuccess(0)' />"
 }
 function internetnormalornotsuccess(boo){
