--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -14,8 +14,8 @@ https://api.qrserver.com/v1/create-qr-code/?color=000000&bgcolor=FFFFFF&data=tes
 <h1>在线制作二维码</h1>
 <form method=post action="make" id=makeform>
 二维码内容: <textarea style="width:80%;" rows=6 placeholder="请输入内容"></textarea><br>
-二维码背景颜色: <input type=color>或<input placeholder=手动输入><br>
-二维码颜色: <input type=color>或<input placeholder=手动输入> <b>提示:</b> 请不要太接近背景颜色<br>
+二维码背景颜色: <input type=color value="#ffffff">或<input placeholder=手动输入><br>
+二维码颜色: <input type=color value="#000000">或<input placeholder=手动输入> <b>提示:</b> 请不要太接近背景颜色<br>
 <button type=submit>制作</button>
 </form>
 <div id=continuelog title=Continue>
