--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -44,7 +44,7 @@ if(boo){
 continuewait.hidden=1;
 incrementcomplete(0);
 } else {
-continuewait.innerHTML="Unable to connect to the internet.<br><button onclick='this.parentElement.dialog(\"close\")'>Close</button>"
+continuewait.innerHTML="Unable to connect to the internet.<br><button onclick='continuelog.dialog(\"close\")'>Close</button>"
 }
 }
 function incrementcomplete(a){
