--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -61,10 +61,13 @@ event.preventDefault();
 var dc,dbg,dd,ds,dt;
 dc=qrc.value.replace("#","");
 dbg=qrbgc.value.replace("#","");
+dd=qrcon.value;
+ds=qrs+"×"+qrs;
+dt=pngjpg;
 var a=document.createElement("a");
 a.href=`https://api.qrserver.com/v1/create-qr-code/?color=${dc}&bgcolor=${dbg}&data=${dd}&qzone=1&margin=0&size=${ds}&ecc=H&format=${dt}&download=1`
 a.download="qrcode."+dt;
-a.hidden=1;
+a.hidden=1;a.target="_blank";
 document.body.append(a);
 a.click();
 }
