--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -35,7 +35,7 @@ dlog.dialog({modal:1})
 makeform.onsubmit=function(event){
 event.preventDefault();
 continuelog.dialog("open");
-continuelog.innerHTML+="<img hidden src='https://www.w3school.com.cn/i/eg_mouse.jpg'"+
+continuelog.innerHTML+="<img hidden src='https://www.w3school.com.cn/i/eg_mouse.jpg?r="+new Date().getTime()+"'"+
 " onload='internetnormalornotsuccess(1)' onerror='internetnormalornotsuccess(0)' />"
 }
 function internetnormalornotsuccess(boo){
