--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -26,7 +26,7 @@ Now: <span id=continuenow>Check whether you are connected to the Internet</span>
 二维码背景颜色: <input id=qrbgc type=color value="#ffffff"><br>
 二维码颜色: <input id=qrc type=color value="#000000"><b>提示:</b> 请不要太接近背景颜色<br>
 二维码大小: <input id=qrs type=number min=150 max=1000 step=25 placeholder="最大1000,最小150,间隔25" value=400><br>
-下载 <button type=submit onclick="pngjpg=png">PNG</button> <button type=submit onclick="pngjpg=jpg">JPG</button>
+下载 <button type=submit onclick="pngjpg='png'">PNG</button> <button type=submit onclick="pngjpg='jpg'">JPG</button>
 </form>
 
 <script>
