--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -26,7 +26,7 @@ Now: <span id=continuenow>Check whether you are connected to the Internet</span>
 二维码背景颜色: <input id=qrbgc type=color value="#ffffff"><br>
 二维码颜色: <input id=qrc type=color value="#000000"><b>提示:</b> 请不要太接近背景颜色<br>
 二维码大小: <input id=qrs type=number min=150 max=1000 step=25 placeholder="间隔25" value=400><br>
-预览 <button id=loadpreview onclick="previewlog.dialog('open');">加载预览</button><br>
+预览 <button id=loadpreview onclick="previewlog.dialog('open');qrc.oninput()">加载预览</button><br>
 下载 <button type=submit onclick="pngjpg='png';startd=1;">PNG</button> <button type=submit onclick="pngjpg='jpg';startd=1;">JPG</button>
 </form>
 <div id=previewlog title=预览>
@@ -100,7 +100,8 @@ okprogress.value=okprogressbfz.innerHTML=80;
 loadnow.innerHTML="正在连接,请稍候...";
 setTimeout(function(){
 okprogress.value=okprogressbfz.innerHTML=100;
-loadnow.innerHTML="已完成<br><button onclick='downloadTag.click()'>下载</button><button onclick='oklog.dialog(\"close\")'>关闭</button>";
+loadnow.innerHTML="已完成<br><button onclick='downloadTag.click()'>下载</button><button onclick='oklog.dialog(\"close\");"+
+"okprogressbfz.innerHTML=okprogress.value=0;loadnow.innerHTML="+'"正在加载..."'+";'>关闭</button>";
 },1000);
 },1000);
 },1000);
