--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -41,7 +41,7 @@ Now: <span id=continuenow>Check whether you are connected to the Internet</span>
 
 <script>
 continuelog.dialog({autoOpen:0,modal:1,width:"300px",hidex:1})
-dlog.dialog({modal:1});oklog.dialog({modal:1,hidex:1});previewlog.dialog({zindex:8});
+dlog.dialog({modal:1});oklog.dialog({modal:1,hidex:1});previewlog.dialog({zindex:8,width:"48%"});
 makeform.onsubmit=function(event){
 event.preventDefault();
 continuelog.dialog("open");
