--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -25,7 +25,7 @@ Now: <span id=continuenow>Check whether you are connected to the Internet</span>
 <big>下载二维码</big><br>
 二维码背景颜色: <input id=qrbgc type=color value="#ffffff"><br>
 二维码颜色: <input id=qrc type=color value="#000000"><b>提示:</b> 请不要太接近背景颜色<br>
-二维码大小: <input id=qrs type=number min=150 max=1000 step=25 placeholder="间隔25" value=400><br>
+二维码大小: <input id=qrs type=number min=150 max=1000 step=1 placeholder="请输入" value=400><br>
 预览 <button id=loadpreview onclick="previewlog.dialog('open');qrc.oninput()">加载预览</button><br>
 下载 <button type=submit onclick="pngjpg='png';startd=1;">PNG</button> <button type=submit onclick="pngjpg='jpg';startd=1;">JPG</button>
 </form>
