--- a/apps/smallapp/more/make-qr/index.html
+++ b/apps/smallapp/more/make-qr/index.html
@@ -13,8 +13,7 @@ https://api.qrserver.com/v1/create-qr-code/?color=000000&bgcolor=FFFFFF&data=tes
 -->
 <h1>在线制作二维码</h1>
 <form method=post action="make" id=makeform>
-二维码内容: <textarea id=qrcon style="width:80%;" rows=6 placeholder="请输入内容"><script>{
-let a=location.href.split("#")[1].replace("/","");if(a) document.write(a);}</script></textarea><br>
+二维码内容: <textarea id=qrcon style="width:80%;" rows=6 placeholder="请输入内容"></textarea><br>
 <button type=submit>制作</button>
 </form>
 <div id=continuelog title=Continue>
@@ -43,6 +42,7 @@ Now: <span id=continuenow>Check whether you are connected to the Internet</span>
 <script>
 continuelog.dialog({autoOpen:0,modal:1,width:"300px",hidex:1})
 dlog.dialog({modal:1});oklog.dialog({modal:1,hidex:1});previewlog.dialog({zindex:8,width:"50%"});
+{let a=location.href.split("#")[1].replace("/","");if(a) qrcon.value=a;}
 makeform.onsubmit=function(event){
 event.preventDefault();
 continuelog.dialog("open");
