--- a/apps/appid/q.html
+++ b/apps/appid/q.html
@@ -1,8 +1,9 @@
 Please wait...
 <script>
 var arr=[];
-arr.push({name:'ghlogin',id:'1352722'})
-
+arr.push({name:'readuserdata',id:'1352722'});
+arr.push({name:'ghlogin',id:'1353314'});
+//end push
 for(let i=0;i<arr.length;i++){
 if(arr[i].name==location.href.split('#')[1]){
 location.href=arr[i].id;
