--- a/htmlmodel/htmlmodel.html
+++ b/htmlmodel/htmlmodel.html
@@ -9,11 +9,11 @@
 <script src="https://shc7432.github.io/public/something/other/htmlToImg.js"></script>
 <script src="https://shc7432.github.io/public/something/other/dialog.js"></script>
 <script src="https://shc7432.github.io/public/something/other/anonymous.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  <!--script src="https://code.jquery.com/jquery-3.5.0.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
   <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"-->
 <script src="https://shc0743.github.io/crypto-js/core.js"></script>
 <script src="https://shc0743.github.io/crypto-js/enc-base64.js"></script>
 <script src="https://shc0743.github.io/crypto-js/enc-hex.js"></script>
