--- a/apps/appid/1353314/index.html
+++ b/apps/appid/1353314/index.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
 <meta charset="utf-8" />
-<title></title>   
+<title>Login with GitHub</title>   
  <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://shc7432.github.io/public/something/sometool.js"></script>
 <script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
