--- a/apps/appid/1353314/index.html
+++ b/apps/appid/1353314/index.html
@@ -54,7 +54,7 @@ loginbtn.onclick=function(){
 try{
 location.href="https://github.com/login/oauth/authorize?client_id=9f33bcf747bc0c6a9ee9&redirect_url="+
 'https://shc7432.github.io/download/apps/appid/1353314/callback?rtn_url='+getUrlValue('rtn_url')+
-"&state="+(+(String(Math.floor(Math.Random()*1000000000000000))+new Date().getTime()).toString(36));
+"&state="+(+(String(Math.floor(Math.random()*1000000000000000))+new Date().getTime()).toString(36));
 }
 catch(e){alert(e)}
 }
