--- a/apps/appid/1353314/callback.html
+++ b/apps/appid/1353314/callback.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script>
 (function(){
+nowc.innerHTML="Loading..."
 /*var a=function(){return {then: function(f){f()}}};
 a().then(function(){123456});*/
 var guv=getUrlValue;
