--- a/apps/smallapp/more/click-run-button/new.html
+++ b/apps/smallapp/more/click-run-button/new.html
@@ -25,7 +25,7 @@ function getRandom(min, max) {
 (function(){
 var guv=getUrlValue,k=guv('password');
 if(k!=="c4a2d15e07f363a363cdfb6e2ed3a8d65dead9db"){
-location.href="data:text/plain,Password error!"
+location.href="data:text/plain,Password%20error!"
 return false;
 }
 })()
