--- a/apps/smallapp/more/click-run-button/new.html
+++ b/apps/smallapp/more/click-run-button/new.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
 <meta charset="utf-8" />
-<title>制作[无法点击的按钮]</title>   
+<title>制作无法点击的按钮</title>   
  <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://shc7432.github.io/public/something/sometool.js"></script>
 <script src="https://shc7432.github.io/public/something/other/userdata.js"></script>
@@ -26,10 +26,44 @@ function getRandom(min, max) {
 var guv=getUrlValue,k=guv('password');
 if(k!=="c4a2d15e07f363a363cdfb6e2ed3a8d65dead9db"){
 location.href="data:text/plain,Password%20error!"
+pz.hidden=1;
 return false;
 }
+p404.hidden=1;
+pz.onsubmit=function(){
+var arr=[],ec=encodeURIComponent;
+arr.push('tte='+ec(tte.value));
+arr.push('b1t='+ec(b1t.value));
+arr.push('b2t='+ec(b2t.value));
+arr.push('b1c='+ec(b1c.value));
+arr.push('b2c='+ec(b2c.value));
+arr.push('nob='+ec(nob.value));
+var str="?"+arr.join("&");
+str="https://shc7432.github.io/download/apps/smallapp/more/click-run-button/"+str;
+pz.reset();
+ress.value=str;
+res.dialog("open");
+}
+res.dialog({modal:1});
 })()
 </script>
+
+<h1 id=p404>404</h1>
+
+<form id=pz>
+<h1>制作按钮</h1>
+标题文字: <input id=tte required><br>
+按钮1文字: <input id=b1t required><br>
+按钮2文字: <input id=b2t required><br>
+按钮1颜色: <input type=color id=b1c required><br>
+按钮2颜色: <input type=color id=b2c required><br>
+点不到的按钮: <select id="nob">
+<option value="1">按钮1</option>
+<option value="2">按钮2</option>
+</select><br>
+<button type=submit>生成</button>
+</form>
+<div id=res title=生成结果><input id=ress><br>按Ctrl+C复制</div>
 
 </body>
 </html>
