--- a/apps/smallapp/more/click-run-button/new.html
+++ b/apps/smallapp/more/click-run-button/new.html
@@ -36,7 +36,7 @@ h1标题文字: <input id=tte required><br>
 <option value="2">按钮2</option>
 </select><br>
 倒计时秒数: <input id=tsc placeholder="不填则为无限大"><br>
-等待秒数<span style="font-size:6px;" onclick="{let w=open();w.alert(
+等待秒数<span style="font-size:6px;" onclick="{let w=open('','_blank');w.alert(
 '过指定秒数后两个按钮调换位置,不填为无');w.close()}">?</span>: <input id="wti"><br>
 <button type=submit>生成</button>
 </form>
