--- a/apps/smallapp/more/click-run-button/new.html
+++ b/apps/smallapp/more/click-run-button/new.html
@@ -28,9 +28,9 @@ function getRandom(min, max) {
 标题: <input id=dti required><br>
 h1标题文字: <input id=tte required><br>
 按钮1文字: <input id=b1t required><br>
-按钮2文字: <input id=b2t required><br>
+按钮2文字: <input id=b2t required><!--br>
 按钮1颜色: <input type=color id=b1c required><br>
-按钮2颜色: <input type=color id=b2c required><br>
+按钮2颜色: <input type=color id=b2c required--><br>
 点不到的按钮: <select id="nob">
 <option value="1">按钮1</option>
 <option value="2">按钮2</option>
@@ -38,10 +38,12 @@ h1标题文字: <input id=tte required><br>
 倒计时秒数: <input id=tsc placeholder="不填则为无限大"><br>
 等待秒数<span style="font-size:6px;" onclick="{let w=open('','_blank');w.alert(
 '过指定秒数后两个按钮调换位置,不填为无');w.close()}">?</span>: <input id="wti"><br>
-<button type=submit>生成</button>
+<button type=submit>生成</button> <button type=button onclick="pz.onsubmit();
+previe.src=ress.value;previ.dialog('open');">预览</button>
 </form>
 <div id=res title=生成结果><input id=ress readonly>  
 <span onclick="copytext(ress.value)">复制</span></div>
+<div id="previ" title=预览><iframe id=previe src="/404.html"></iframe></div>
 
 <script>
 (function(){
@@ -53,22 +55,22 @@ return false;
 }
 p404.hidden=1;
 pz.onsubmit=function(event){
-event.preventDefault();
+if(event) event.preventDefault();
 var arr=[],ec=encodeURIComponent;
 arr.push('dti='+ec(dti.value));
 arr.push('tte='+ec(tte.value));
 arr.push('b1t='+ec(b1t.value));
 arr.push('b2t='+ec(b2t.value));
-arr.push('b1c='+ec(b1c.value));
-arr.push('b2c='+ec(b2c.value));
+/*arr.push('b1c='+ec(b1c.value));
+arr.push('b2c='+ec(b2c.value));*/
 arr.push('nob='+ec(nob.value));
 arr.push('tsc='+ec(tsc.value));
 arr.push('wti='+ec(wti.value));
 var str="?"+arr.join("&");
 str="https://shc7432.github.io/download/apps/smallapp/more/click-run-button/"+str;
-pz.reset();
+//pz.reset();
 ress.value=str;
-res.dialog("open");
+if(event) res.dialog("open");
 }
 res.dialog({modal:1});
 })()
