--- a/apps/smallapp/more/click-run-button/index.html
+++ b/apps/smallapp/more/click-run-button/index.html
@@ -38,5 +38,16 @@ function getRandom(min, max) {
 
 <h1>404 Not Found</h1>
 
+<script>
+(function(){
+var ge=getUrlValue;
+var dti,tte,b1t,b2t,nob,tsc,wti;
+dti=ge('dti');tte=ge('tti');b1t=ge('b1t');b2t=ge('b2t');
+dti=ge('nob');tte=ge('tsc');dti=ge('wti');
+if(!(dti&tte&b1t&b2t&nob&tsc&wti)) return;
+document.title=dti;
+})()
+</script>
+
 </body>
 </html>
