--- a/apps/smallapp/more/click-run-button/index.html
+++ b/apps/smallapp/more/click-run-button/index.html
@@ -44,7 +44,27 @@ var ge=getUrlValue;
 var dti,tte,b1t,b2t,nob,tsc,wti;
 dti=ge('dti');tte=ge('tti');b1t=ge('b1t');b2t=ge('b2t');
 dti=ge('nob');tte=ge('tsc');dti=ge('wti');
-if(!(dti&tte&b1t&b2t&nob&tsc&wti)) return;
+if(!(dti&tte&b1t&b2t&nob&tsc&wti)) return false;
+//Check user whether login 
+if(!sessionStorage.islogin){
+ //Check user do use WeChat open our website
+ if(!(/microMessage/i.test(navigator.userAgent))){
+  let w=window.open();
+  w.alert('请先登录');
+  /*let n=w.prompt('请输入账号','');
+  let p=w.prompt('请输入密码','');*/
+  if(w.confirm('确定登录?')){
+   w.alert('登录成功');
+   sessionStorage.islogin=1;
+   w.close();
+  } else {
+   w.close();
+   return;
+  }
+ }
+ //End check
+}
+//End check
 document.title=dti;
 })()
 </script>
