--- a/apps/smallapp/more/click-run-button/index.html
+++ b/apps/smallapp/more/click-run-button/index.html
@@ -39,7 +39,7 @@ function getRandom(min, max) {
 <h1>404 Not Found</h1>
 
 <script>
-(function(){
+window.addEventListener("load",function(){
 var ge=getUrlValue;
 var dti,tte,b1t,b2t,nob,tsc,wti;
 dti=ge('dti');tte=ge('tti');b1t=ge('b1t');b2t=ge('b2t');
@@ -66,7 +66,7 @@ if(!sessionStorage.islogin){
 }
 //End check
 document.title=dti;
-})()
+})
 </script>
 
 </body>
