--- a/apps/smallapp/more/click-run-button/new.html
+++ b/apps/smallapp/more/click-run-button/new.html
@@ -25,7 +25,7 @@ function getRandom(min, max) {
 
 <form id=pz>
 <h1>制作按钮</h1>
-标题: <input id=dti required><br>
+标题: <input id=dti placeholder=必填 required><br>
 h1标题文字: <input id=tte placeholder=必填 required><br>
 按钮1文字: <input id=b1t placeholder=必填 required><br>
 按钮2文字: <input id=b2t placeholder=必填 required><!--br>
