--- a/apps/smallapp/more/click-run-button/index.html
+++ b/apps/smallapp/more/click-run-button/index.html
@@ -43,7 +43,7 @@ window.addEventListener("load",function(){
 var ge=getUrlValue;
 var dti,tte,b1t,b2t,nob,tsc,wti;
 dti=ge('dti');tte=ge('tti');b1t=ge('b1t');b2t=ge('b2t');
-dti=ge('nob');tte=ge('tsc');dti=ge('wti');
+nob=ge('nob');tte=ge('tsc');dti=ge('wti');
 if(!(dti&tte&b1t&b2t&nob)) return false;
 //Check user whether login 
 if(!sessionStorage.islogin){
