--- a/apps/smallapp/more/click-run-button/new.html
+++ b/apps/smallapp/more/click-run-button/new.html
@@ -42,9 +42,10 @@ h1标题文字: <input id=tte placeholder=必填 required><br>
 <button type=submit>生成</button> <!--button type=button onclick="pz.onsubmit();
 previe.src=ress.value;previ.dialog('open');">预览</button-->
 </form>
-<div id=res title=生成结果><input id=ress readonly>  
-<span onclick="copytext(ress.value)">复制</span> <span onclick="pz.reset()">重置</span></div>
-<!--div id="previ" title=预览><iframe id=previe src="/404.html"></iframe></div-->
+<div id=res title=生成结果><input id=ress readonly>  <br>
+<span onclick="copytext(ress.value)">复制</span> 
+<span onclick="pz.reset()">重置</span> 
+<span onclick="open(ress.value)">预览</span> </div>
 
 <script>
 (function(){
