--- a/apps/smallapp/movement-pedometer/index.html
+++ b/apps/smallapp/movement-pedometer/index.html
@@ -33,19 +33,28 @@ function getRandom(min, max) {
 <body>
 <span id=toolow><h1>您的浏览器版本过低</h1><h2>请更换浏览器或启用JavaScript</h2></span>
 <div id=mainDivElement>
-
+<h1>计步器</h1>
+<big>今日步数 <span style="color:blue;" id=tdnum>0</span></big><br>
+实时计步! <span onclick="let a=open();a.alert('利用经纬度的变化计步');a.close()">?</span><br>
+i 由于本计步器特性,需要获取经纬度,所以<a href='javascript:;' onclick=''>点击授权</a>
 </div>
 
 <script>
 (function(){
 toolow.hidden=1;
+var date=new Date(),ystd=new Date();ystd.setDate(ystd.getDate()-1);
+var tdd=date.getFullYear()+"-"+(date.getMonth()+1)+"-"+date.getDate();
+ystd=ystd.getFullYear()+"-"+(ystd.getMonth()+1)+"-"+ystd.getDate();
 try{
 var bs=JSON.parse(localStorage.memoryNumberOfStepsWithJson);
 }catch(e){
-localStorage.memoryNumberOfStepsWithJson="{}";
+let a=new Object();a.nums=new Object();
+localStorage.memoryNumberOfStepsWithJson=a;
 }
+bs.nums[tdd] ? false : bs.nums[tdd]=new Object() ;
+bs.todayNum=(bs.nums[tdd].lastNum ? bs.nums[tdd].lastNum : 0);
+document.title=(bs.todayNum ? `计步器 今日步数${bs.todayNum}` : '计步器');
 })()
-document.title=();
 </script>
 </body>
 </html>
